--- a/Code/Recipe.html
+++ b/Code/Recipe.html
@@ -7,14 +7,10 @@
 <body>
     <header>
         <section>
-            <h2>Simple caprese salad</h2>
-            <p>A spin on the standard <a href="https://en.wikipedia.org/wiki/Caprese_salad">caprese salad</a>.</p>
+            <h2>Garlic Frog Leg Recipes</h2>
+            <p>A spin on the standard <a href="">Garlic Frog legs</a>.</p>
         </section>
         <section>
-            <p>Traditionally, the caprese salad calls for sliced tomatoes and slices of mozzarella. This version uses cherry
-                tomatoes, and either mozzarella balls or small cubes of the cheese. This gives you a salad that's a bit more
-                like a salad, and works better as a side item. In addition, the cherry tomatoes are a bit sweeter, which
-                brings a little more brightness to the dish.</p>
             <p>The recipe below is designed to act as a guide, and not something to be followed prescriptively. Play with your
                 food! Adjust amounts based on your tastes.</p>
         </section>
@@ -24,23 +20,31 @@
             <h3>Ingredients</h3>
             <p>Serves 2 people</p>
             <ul>
-                <li>10 cherry tomatoes, sliced in half</li>
-                <li>3 oz <em>fresh</em> mozzarella, cut to size to match cherry tomatoes</li>
-                <li>6 basil leaves, <a href="https://en.wikipedia.org/wiki/Chiffonade">chiffonade</a></li>
-                <li>2 Tbsp extra virgin olive oil, or to taste</li>
-                <li>1 Tbsp balsamic vinegar, or to taste</li>
-                <li>2 healthy pinches of Kosher salt, or to taste</li>
-                <li>6-8 grinds of pepper, or to taste</li>
+                <li>a bag of frog legs</li>
+                <li>1 bulb <em>fresh</em> garlic </li>
+                <li>Mushrooms</li>
+                <li>Butter</li>
+                <li>Grapeseed oil</li>
+                <li>Flour </li>
+                <li>Beer</li>
+                <li>White Wine</li>
+                <li>Seasoning</li>
             </ul>
         </section>
         <section>
             <h3>Preparation</h3>
             <ul>
-                <li>Pepare the tomatoes, mozzarella and basil as <a href="#ingredients">specified</a>, and place in a medium-sized
-                    bowl.</li>
-                <li>Season with salt and pepper.</li>
-                <li>Add extra virgin olive oil and balsamic. Toss to coat.</li>
-                <li>Adjust seasoning as needed.</li>
+                <li>Soak frog legs in beer for an hour or so.</li>
+                <li>Season: I used our Duck Commander’s Zesty Cajun seasoning, pepper, and blackening seasoning.</li> 
+                <li>Roll frog legs in flour, then set aside.</li>
+                <li>In a large black skillet, bring butter and grapeseed oil up to high 
+                    (don’t burn the butter; it will brown when burning) — not much oil and butter, just enough to brown.If butter 
+                    gets low, throw another half stick in.</li>
+                <li>When oil and butter start sizzling, working in batches if necessary, brown frog legs on both sides; be careful, they splatter.</li>
+                <li>Set browned frog legs to side. Now, with what’s left in the pan (which is the best of, what’s left), add white wine, garlic (whole pods, peeled), and mushrooms, and cook for a few minutes.</li> 
+                <li>Add all your frog legs back in on top of this, put lid on, and cook in oven for about 30 minutes at 300ºF, according to how big the legs are (these tonight were huge) so they didn’t cook fully in the browning process. 
+                    If they are small, then cook less.</li>
+                <li>Meat will be falling off the bone. You will know it’s done—believe me!</li>
                 <li>Serve!</li>
             </ul>
         </section>
